# waze-mcp

./: .dockerignore  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  pyproject.toml  requirements.txt  server.py  waze-mcp.code-workspace
.github/: dependabot.yml
.github/workflows/: ci.yml  publish.yml
tests/: test_server.py
waze_mcp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
